syntax = "proto3";

import "google/protobuf/empty.proto";

package com.example.demo;

message Message {
    string payload = 1;
    int64 rq_id = 2;
    string from = 3;
    string to = 4;
}

message VerifyResponse {
    Status status = 1;
    enum Status {
        UNKNOWN = 0;
        SUCCESS = 1;
        ERROR = 2;
    }
}

service Messenger {
    rpc sendMessage (Message) returns (google.protobuf.Empty);
}

service MessageVerifier {
    rpc VerifyMessage (Message) returns (VerifyResponse);
}